--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -167,6 +167,11 @@
 .bookmakerDetailsContent{
     margin: 10px;
 }
+.sortByForm{
+    width: 180px;
+    display: inline-block;
+}
+
 
 /*Admin panel*/
 #editBookmakerForm, #deleteBookmakerForm{
