--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -201,7 +201,7 @@
     height: 16px;
     background-position: -239px -322px;
 }
-.logo-betadonis{
+.logo-betadoins{
     width: 75px;
     height: 16px;
     background-position: -318px -302px;
