Contact us form, footer color

--- a/public/assets/css/ace.css
+++ b/public/assets/css/ace.css
@@ -5409,7 +5409,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', end
   /*border-top: 3px double #E5E5E5;*/
 }
 .footer .navbar-nav > li > a {
-    color: #e8b110;
+    color: #ffffff;
     padding-bottom: 1px;
     padding-top: 1px;
 }
